--- a/project/config/buildspec.yaml
+++ b/project/config/buildspec.yaml
@@ -32,8 +32,8 @@ phases:
 
       - cd "${CODEBUILD_SRC_DIR}/project"
       - terraform init -input=false
-      - terraform plan -target=module.ecs-cluster --var-file="./config/${ENV}.tfvars" -var="image_tag=${TAG}" -no-color -input=false -out plan.out
-      - terraform apply -auto-approve -no-color -input=false tfplan
+      - terraform plan -target=module.ecs --var-file="./config/${ENV}.tfvars" -var="image_tag=${TAG}" -no-color -input=false -out plan.out
+      - terraform apply -auto-approve -no-color -input=false plan.out
 
   post_build:
     commands:
